--- a/package.json
+++ b/package.json
@@ -19,15 +19,19 @@
     "@angular/platform-browser": "~10.0.0",
     "@angular/platform-browser-dynamic": "~10.0.0",
     "@angular/router": "~10.0.0",
+    "@ionic-native/android-permissions": "^5.30.0",
     "@ionic-native/core": "^5.0.0",
     "@ionic-native/geolocation": "^5.30.0",
+    "@ionic-native/location-accuracy": "^5.30.0",
     "@ionic-native/native-geocoder": "^5.30.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.0.0",
     "bootstrap": "^4.5.3",
+    "cordova-plugin-android-permissions": "^1.1.2",
     "cordova-plugin-geolocation": "^4.1.0",
     "cordova-plugin-nativegeocoder": "^3.4.1",
+    "cordova-plugin-request-location-accuracy": "^2.3.0",
     "moment": "^2.29.1",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
@@ -60,7 +64,9 @@
   "cordova": {
     "plugins": {
       "cordova-plugin-geolocation": {},
-      "cordova-plugin-nativegeocoder": {}
+      "cordova-plugin-nativegeocoder": {},
+      "cordova-plugin-android-permissions": {},
+      "cordova-plugin-request-location-accuracy": {}
     }
   }
 }
