--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~10.0.0",
     "@angular/router": "~10.0.0",
     "@ionic-native/android-permissions": "^5.30.0",
+    "@ionic-native/background-mode": "^5.32.0",
     "@ionic-native/core": "^5.0.0",
     "@ionic-native/geolocation": "^5.30.0",
     "@ionic-native/location-accuracy": "^5.30.0",
@@ -28,10 +29,19 @@
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.0.0",
     "bootstrap": "^4.5.3",
+    "cordova-android": "6.3.0",
+    "cordova-plugin-add-swift-support": "^2.0.2",
     "cordova-plugin-android-permissions": "^1.1.2",
+    "cordova-plugin-background-mode": "^0.7.3",
+    "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-geolocation": "^4.1.0",
+    "cordova-plugin-ionic-keyboard": "^2.2.0",
+    "cordova-plugin-ionic-webview": "^4.2.1",
     "cordova-plugin-nativegeocoder": "^3.4.1",
     "cordova-plugin-request-location-accuracy": "^2.3.0",
+    "cordova-plugin-splashscreen": "^5.0.2",
+    "cordova-plugin-statusbar": "^2.4.2",
+    "cordova-plugin-whitelist": "^1.3.3",
     "moment": "^2.29.1",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
@@ -66,7 +76,17 @@
       "cordova-plugin-geolocation": {},
       "cordova-plugin-nativegeocoder": {},
       "cordova-plugin-android-permissions": {},
-      "cordova-plugin-request-location-accuracy": {}
-    }
+      "cordova-plugin-request-location-accuracy": {},
+      "cordova-plugin-whitelist": {},
+      "cordova-plugin-statusbar": {},
+      "cordova-plugin-device": {},
+      "cordova-plugin-splashscreen": {},
+      "cordova-plugin-ionic-webview": {},
+      "cordova-plugin-ionic-keyboard": {},
+      "cordova-plugin-background-mode": {}
+    },
+    "platforms": [
+      "android"
+    ]
   }
 }
